# privacy-fl-gateway

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/adr/: 0001-fedavg-strategy.md
src/: client.py  server.py
src/auth/: jwt.py
src/strategy/: dp.py
tests/: test_client.py  test_dp.py  test_server.py
