[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-fl-gateway"
version = "0.1.0"
description = "Federated learning gateway with differential privacy"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Muhammad Ahsan Sajjad"}]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
